# CodeReviewAI

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/: constants.py  main.py  schemas.py  service.py
src/ai/: client.py  config.py
src/github/: client.py  config.py  decorators.py  schemas.py
tests/: test_services.py
