[tool.poetry]
name = "codereviewai"
version = "0.1.0"
description = ""
authors = ["Dmytro Shlapak <bdlap.shl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pydantic-settings = "^2.6.1"
openai = "^1.54.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.4"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.format]
quote-style = "single"