[tool.poetry]
name = "codereviewai"
version = "0.1.0"
description = ""
authors = ["Dmytro Shlapak <bdlap.shl@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pydantic-settings = "^2.6.1"
openai = "^1.54.5"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
ruff = "^0.7.4"
pre-commit = "^4.0.1"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
pythonpath = [
    '.', 'src',
]